--- a/rt.ipynb
+++ b/rt.ipynb
@@ -1393,11 +1393,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f4ba55e7-e245-41f3-9be3-f05c113540a3",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pre_text': ['interest rate to a variable interest rate based on the three-month libor plus 2.05% ( 2.05 % ) ( 2.34% ( 2.34 % ) as of october 31 , 2009 ) .',\n",
+       "  'if libor changes by 100 basis points , our annual interest expense would change by $ 3.8 million .',\n",
+       "  'foreign currency exposure as more fully described in note 2i .',\n",
+       "  'in the notes to consolidated financial statements contained in item 8 of this annual report on form 10-k , we regularly hedge our non-u.s .',\n",
+       "  'dollar-based exposures by entering into forward foreign currency exchange contracts .',\n",
+       "  'the terms of these contracts are for periods matching the duration of the underlying exposure and generally range from one month to twelve months .',\n",
+       "  'currently , our largest foreign currency exposure is the euro , primarily because our european operations have the highest proportion of our local currency denominated expenses .',\n",
+       "  'relative to foreign currency exposures existing at october 31 , 2009 and november 1 , 2008 , a 10% ( 10 % ) unfavorable movement in foreign currency exchange rates over the course of the year would not expose us to significant losses in earnings or cash flows because we hedge a high proportion of our year-end exposures against fluctuations in foreign currency exchange rates .',\n",
+       "  'the market risk associated with our derivative instruments results from currency exchange rate or interest rate movements that are expected to offset the market risk of the underlying transactions , assets and liabilities being hedged .',\n",
+       "  'the counterparties to the agreements relating to our foreign exchange instruments consist of a number of major international financial institutions with high credit ratings .',\n",
+       "  'we do not believe that there is significant risk of nonperformance by these counterparties because we continually monitor the credit ratings of such counterparties .',\n",
+       "  'while the contract or notional amounts of derivative financial instruments provide one measure of the volume of these transactions , they do not represent the amount of our exposure to credit risk .',\n",
+       "  'the amounts potentially subject to credit risk ( arising from the possible inability of counterparties to meet the terms of their contracts ) are generally limited to the amounts , if any , by which the counterparties 2019 obligations under the contracts exceed our obligations to the counterparties .',\n",
+       "  'the following table illustrates the effect that a 10% ( 10 % ) unfavorable or favorable movement in foreign currency exchange rates , relative to the u.s .',\n",
+       "  'dollar , would have on the fair value of our forward exchange contracts as of october 31 , 2009 and november 1 , 2008: .'],\n",
+       " 'post_text': ['fair value of forward exchange contracts after a 10% ( 10 % ) unfavorable movement in foreign currency exchange rates asset ( liability ) .',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '$ 20132 $ ( 9457 ) fair value of forward exchange contracts after a 10% ( 10 % ) favorable movement in foreign currency exchange rates liability .',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '.',\n",
+       "  '$ ( 6781 ) $ ( 38294 ) the calculation assumes that each exchange rate would change in the same direction relative to the u.s .',\n",
+       "  'dollar .',\n",
+       "  'in addition to the direct effects of changes in exchange rates , such changes typically affect the volume of sales or the foreign currency sales price as competitors 2019 products become more or less attractive .',\n",
+       "  'our sensitivity analysis of the effects of changes in foreign currency exchange rates does not factor in a potential change in sales levels or local currency selling prices. .'],\n",
+       " 'filename': 'ADI/2009/page_49.pdf',\n",
+       " 'table_ori': [['', 'October 31, 2009', 'November 1, 2008'],\n",
+       "  ['Fair value of forward exchange contracts asset (liability)',\n",
+       "   '$6,427',\n",
+       "   '$(23,158)'],\n",
+       "  ['Fair value of forward exchange contracts after a 10% unfavorable movement in foreign currency exchange rates asset (liability)',\n",
+       "   '$20,132',\n",
+       "   '$(9,457)'],\n",
+       "  ['Fair value of forward exchange contracts after a 10% favorable movement in foreign currency exchange rates liability',\n",
+       "   '$(6,781)',\n",
+       "   '$(38,294)']],\n",
+       " 'table': [['', 'october 31 2009', 'november 1 2008'],\n",
+       "  ['fair value of forward exchange contracts asset ( liability )',\n",
+       "   '$ 6427',\n",
+       "   '$ -23158 ( 23158 )'],\n",
+       "  ['fair value of forward exchange contracts after a 10% ( 10 % ) unfavorable movement in foreign currency exchange rates asset ( liability )',\n",
+       "   '$ 20132',\n",
+       "   '$ -9457 ( 9457 )'],\n",
+       "  ['fair value of forward exchange contracts after a 10% ( 10 % ) favorable movement in foreign currency exchange rates liability',\n",
+       "   '$ -6781 ( 6781 )',\n",
+       "   '$ -38294 ( 38294 )']],\n",
+       " 'qa': {'question': 'what is the the interest expense in 2009?',\n",
+       "  'answer': '380',\n",
+       "  'explanation': '',\n",
+       "  'ann_table_rows': [],\n",
+       "  'ann_text_rows': [1],\n",
+       "  'steps': [{'op': 'divide1-1', 'arg1': '100', 'arg2': '100', 'res': '1%'},\n",
+       "   {'op': 'divide1-2', 'arg1': '3.8', 'arg2': '#0', 'res': '380'}],\n",
+       "  'program': 'divide(100, 100), divide(3.8, #0)',\n",
+       "  'gold_inds': {'text_1': 'if libor changes by 100 basis points , our annual interest expense would change by $ 3.8 million .'},\n",
+       "  'exe_ans': 3.8,\n",
+       "  'tfidftopn': {'text_14': 'dollar , would have on the fair value of our forward exchange contracts as of october 31 , 2009 and november 1 , 2008: .',\n",
+       "   'text_0': 'interest rate to a variable interest rate based on the three-month libor plus 2.05% ( 2.05 % ) ( 2.34% ( 2.34 % ) as of october 31 , 2009 ) .'},\n",
+       "  'program_re': 'divide(3.8, divide(100, 100))',\n",
+       "  'model_input': [['text_0',\n",
+       "    'interest rate to a variable interest rate based on the three-month libor plus 2.05% ( 2.05 % ) ( 2.34% ( 2.34 % ) as of october 31 , 2009 ) .'],\n",
+       "   ['text_1',\n",
+       "    'if libor changes by 100 basis points , our annual interest expense would change by $ 3.8 million .'],\n",
+       "   ['text_14',\n",
+       "    'dollar , would have on the fair value of our forward exchange contracts as of october 31 , 2009 and november 1 , 2008: .']]},\n",
+       " 'id': 'ADI/2009/page_49.pdf-1',\n",
+       " 'table_retrieved': [{'score': -0.6207679510116577, 'ind': 'table_1'},\n",
+       "  {'score': -0.8948984742164612, 'ind': 'table_2'}],\n",
+       " 'text_retrieved': [{'score': 1.251369595527649, 'ind': 'text_1'},\n",
+       "  {'score': 0.6589734554290771, 'ind': 'text_0'},\n",
+       "  {'score': -0.1914736032485962, 'ind': 'text_14'}],\n",
+       " 'table_retrieved_all': [{'score': -0.6207679510116577, 'ind': 'table_1'},\n",
+       "  {'score': -0.8948984742164612, 'ind': 'table_2'},\n",
+       "  {'score': -1.2129878997802734, 'ind': 'table_3'},\n",
+       "  {'score': -2.9782934188842773, 'ind': 'table_0'}],\n",
+       " 'text_retrieved_all': [{'score': 1.251369595527649, 'ind': 'text_1'},\n",
+       "  {'score': 0.6589734554290771, 'ind': 'text_0'},\n",
+       "  {'score': -0.1914736032485962, 'ind': 'text_14'},\n",
+       "  {'score': -1.0945320129394531, 'ind': 'text_47'},\n",
+       "  {'score': -1.4916260242462158, 'ind': 'text_24'},\n",
+       "  {'score': -1.5615578889846802, 'ind': 'text_12'},\n",
+       "  {'score': -1.572263479232788, 'ind': 'text_15'},\n",
+       "  {'score': -1.6337369680404663, 'ind': 'text_5'},\n",
+       "  {'score': -1.678298830986023, 'ind': 'text_3'},\n",
+       "  {'score': -1.6905218362808228, 'ind': 'text_6'},\n",
+       "  {'score': -1.9114893674850464, 'ind': 'text_46'},\n",
+       "  {'score': -1.914547324180603, 'ind': 'text_7'},\n",
+       "  {'score': -1.955027461051941, 'ind': 'text_8'},\n",
+       "  {'score': -2.0304598808288574, 'ind': 'text_49'},\n",
+       "  {'score': -2.0383174419403076, 'ind': 'text_13'},\n",
+       "  {'score': -2.112241268157959, 'ind': 'text_10'},\n",
+       "  {'score': -2.1439552307128906, 'ind': 'text_11'},\n",
+       "  {'score': -2.2258567810058594, 'ind': 'text_4'},\n",
+       "  {'score': -2.409395694732666, 'ind': 'text_48'},\n",
+       "  {'score': -2.6092159748077393, 'ind': 'text_9'},\n",
+       "  {'score': -2.6313436031341553, 'ind': 'text_2'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_16'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_17'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_18'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_19'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_20'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_21'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_22'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_23'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_25'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_26'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_27'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_28'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_29'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_30'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_31'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_32'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_33'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_34'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_35'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_36'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_37'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_38'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_39'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_40'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_41'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_42'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_43'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_44'},\n",
+       "  {'score': -2.932347536087036, 'ind': 'text_45'}]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=open(\"train.json\")\n",
+    "data=json.load(f)\n",
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83ced62c-367e-4d2f-8813-80f2424f81de",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "        acc_len = 0\n",
+    "        all_text_in = {}\n",
+    "        all_table_in = {}\n",
+    "\n",
+    "        for tmp in gold_inds:\n",
+    "            if \"table\" in tmp:\n",
+    "                all_table_in[tmp] = gold_inds[tmp]\n",
+    "            else:\n",
+    "                all_text_in[tmp] = gold_inds[tmp]\n",
+    "\n",
+    "        context = \"\"\n",
+    "        for tmp in gold_inds:\n",
+    "            context += gold_inds[tmp]\n",
+    "\n",
+    "        acc_len = len(context.split(\" \"))\n",
+    "\n",
+    "        for tmp in sorted_dict:\n",
+    "            if len(all_table_in) + len(all_text_in) >= topn:\n",
+    "                break\n",
+    "            this_sent_ind = int(tmp[\"ind\"].split(\"_\")[1])\n",
+    "\n",
+    "            if \"table\" in tmp[\"ind\"]:\n",
+    "                this_sent = table_row_to_text(table[0], table[this_sent_ind])\n",
+    "            else:\n",
+    "                this_sent = all_text[this_sent_ind]\n",
+    "\n",
+    "            if acc_len + len(this_sent.split(\" \")) < max_len:\n",
+    "                if \"table\" in tmp[\"ind\"]:\n",
+    "                    all_table_in[tmp[\"ind\"]] = this_sent\n",
+    "                else:\n",
+    "                    all_text_in[tmp[\"ind\"]] = this_sent\n",
+    "\n",
+    "                acc_len += len(this_sent.split(\" \"))\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        this_model_input = []\n",
+    "\n",
+    "        # sorted_dict = sorted(all_table_in.items(), key=lambda kv: int(kv[0].split(\"_\")[1]))\n",
+    "        # this_model_input.extend(sorted_dict)\n",
+    "\n",
+    "        # sorted_dict = sorted(all_text_in.items(), key=lambda kv: int(kv[0].split(\"_\")[1]))\n",
+    "        # this_model_input.extend(sorted_dict)\n",
+    "\n",
+    "        # original_order\n",
+    "        sorted_dict_table = sorted(all_table_in.items(), key=lambda kv: int(kv[0].split(\"_\")[1]))\n",
+    "        sorted_dict_text = sorted(all_text_in.items(), key=lambda kv: int(kv[0].split(\"_\")[1]))\n",
+    "\n",
+    "        for tmp in sorted_dict_text:\n",
+    "            if int(tmp[0].split(\"_\")[1]) < len(pre_text):\n",
+    "                this_model_input.append(tmp)\n",
+    "\n",
+    "        for tmp in sorted_dict_table:\n",
+    "            this_model_input.append(tmp)\n",
+    "\n",
+    "        for tmp in sorted_dict_text:\n",
+    "            if int(tmp[0].split(\"_\")[1]) >= len(pre_text):\n",
+    "                this_model_input.append(tmp)\n",
+    "\n",
+    "\n",
+    "        each_data[\"qa\"][\"model_input\"] = this_model_input\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
